src/assets/scss/components/_programme-teaser.scss
.programme-teaser {
  @include xy-grid;
  justify-content: center;
  flex-flow: row wrap;

  &__item {
    // @include xy-cell( 6 ); pre styri predstavenia
    @include xy-cell(6);
    margin: 0 auto;
  }
  

  &__title {
    font-size: rem-calc(14);
    font-weight: $global-weight-bold;
    color: $amp-secondary;
    @include rotate-cw-m;
  }

  &__performer {
    color: $amp-button-color;
  }

  &__item:nth-child(2n + 2) &__title,
  &__item:nth-child(2n + 3) &__title {
    @include rotate-ccw-m;
  }

  &__item:nth-child(2n + 4) &__title {
    @include rotate-cw-m;
  }

  &__description {
    font-size: rem-calc(16);
  }

  &__item_full {
    // @include xy-cell(6);
    margin: 0 auto;
    transform: rotate(0deg);
    margin-top: 40px;
    text-align: center;
  }

  @include breakpoint(medium) {
    &__push_right {
      //visuali align items in center -> healines are wide and have a lot of blank space
      //padding-left: 20%;
      text-align: center;
    }
    
    margin: rem-calc(50 0);

    &__item {
      // @include xy-cell( 3 );
      @include xy-gutters(25px, "padding");
      display: flex;
      flex-flow: column nowrap;
      justify-content: center;
    }

    &__title {
      font-size: rem-calc(21);
      margin-bottom: rem-calc(24);
    }

    &__description {
      font-size: rem-calc(21);
    }
  }

  @include breakpoint(large) {
    &__item {
      @include xy-cell(6);
      // padding: 0 4rem;
      margin-bottom: rem-calc(40);
    }
    &__item_full {
      @include xy-cell(4);
      margin: 0 auto;
      transform: rotate(0deg);
      // margin-top: 60px;
      text-align: center;
    }
    &__item_full:nth-child(2n + 3) &__title {
      transform: rotate(0deg);
    }
  }
}

